src/app/design/frontend/Scandiweb/pwa/src/app/component/ProductActions/ProductActions.style.override.scss
.ProductActions {
    @include mobile {
        background: var(--header-background);
    }

    &-AddToCartWrapper {
        @include mobile {
            border-top: none;
            order: 4;
            padding: 0 0 0.5rem 0;
            position: static;
        }

        @include after-mobile {
            width: 100%;
            margin-right: 0;
        }
    }

    &-AddToCart {
        @include mobile {
            width: 110%;
        }

        @include after-mobile {
            width: 40%;
        }
    }

    &-Attributes {
        @include mobile {
            border-top: none;
        }

        @include after-mobile {
            padding: 0;
        }
    }

    &-AttributesWrapper {
        @include mobile {
            margin: 0 0 15px 0;
            order: 8;
        }
    }

    &-Brand {
        @include mobile {
            font-size: 13px;
            margin: 0.5rem 0 0 0;
            text-align: center;
            color: #000;
        }
    }

    &-NameAndPrice {
        @include after-mobile {
            padding-top: 50px;
        }

        @include mobile {
            display: flex;
            justify-content: center;
            margin: 5px 0;
        }
    }

    &-Price {
        font-size: 13px;
        order: 3;
        padding: 0;
        display: flex;
        text-align: center;
        align-items: center;
        justify-content: left;
        font-weight: 500;

        & del {
            margin-right: 5px;
            font-size: 14px;
            order: 1;
            opacity: 1;
        }

        & ins {
            order: 2;
        }

        & data > span,
        & del > span {
            padding-left: 2px;
        }

        & ins {
            color: red;
        }

        @include after-mobile {
            font-size: 24px;
            font-weight: normal;
            padding: 0;
        }

        &:last-of-type {
            padding: 0 0 0 1px;
        }

        &::before {
            @include mobile {
                margin: 0 5px;
                position: relative;
                top: -1px;
                content: '|';
            }
        }
    }

    &-Price + &-Section_type_short {
        margin-top: 0;
    }

    &-Name {
        @include after-mobile {
            text-transform: uppercase;
            font-size: 35px;
            font-weight: 700;
        }
    }

    &-Section {
        &_type {
            &_name {
                @include mobile {
                    display: block;
                    margin: 0;
                    order: 2;
                    padding: 0;
                }
            }
            &_short {
                @include mobile {
                    border-bottom: 0;
                    margin: 15px 0 20px 0;
                    order: 6;
                    padding: 0;
                }

                @include after-mobile {
                    padding: 1.5rem 0;
                }
            }
        }
    }

    &-ShortDescription {
        margin: 0;
        order: 6;
    }

    &-Title {
        @include mobile {
            font-size: 1rem;
            font-weight: lighter;
            text-transform: uppercase;
        }
        @include after-mobile {
            font-size: 2.5rem;
            font-weight: 700;
        }
    }

    &-Qty {
        @include after-mobile {
            display: none;
        }
    }
}

